--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,11 @@ dependencies:
   firebase_auth: ^0.11.1+8
   google_sign_in: ^4.0.4
   flutter_secure_storage: ^3.0.0
- 
+  flutter_rating_bar: 3.0.1+1
+  image_picker: 0.6.5+2
+  dio: 3.0.9
+  mime: 0.9.6+3
+  http_parser: 3.1.4
 
   flutter:
     sdk: flutter
